tests/errors/err05_caracter_ilegal.ml
// Error 05: [LÉXICO] Carácter no reconocido
a = 5@3;
print(a);
